<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/txtAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/account"
                    android:textColor="@color/YellowOrange"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imgExit"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignBottom="@id/txtAccount"
                    android:src="@drawable/ic_back"
                    android:contentDescription="@string/exit"
                    />

                <TextView
                    android:id="@+id/txtHistory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtAccount"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/history"
                    android:textColor="@color/YellowOrange"
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvAccountHistory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtHistory"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnTryQuestions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rvAccountHistory"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/try_question_sets"
                    android:textSize="13sp"
                    />


                <TextView
                    android:id="@+id/txtDetailsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btnTryQuestions"
                    android:layout_margin="15dp"
                    android:text="@string/account_details"
                    android:textColor="@color/YellowOrange"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtDetailsText"
                    android:layout_marginStart="15dp"
                    android:textColor="@color/YellowOrange"
                    android:textSize="16sp"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnChangeDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtDetails"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:text="@string/change_details"
                    android:textSize="13sp"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSignOut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btnChangeDetails"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="30dp"
                    android:text="@string/sign_out"
                    android:textSize="13sp" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btnSignOut"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:text="@string/sign_up"
                    android:textSize="13sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSignIn"
                    style="@style/defaultTextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btnSignUp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="30dp"
                    android:text="@string/sign_in"
                    android:textSize="13sp"

                    />

            </RelativeLayout>
        </ScrollView>
    </com.google.android.material.card.MaterialCardView>


</RelativeLayout>