<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relPinVerification"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvPinVerification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:layout_centerInParent="true"
        >

        <RelativeLayout
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/txtPin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/enter_pin"
                android:textColor="@color/YellowOrange"
                android:textStyle="bold"
                android:textSize="21sp" />

        <EditText
            android:id="@+id/edtTxtPin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/txtPin"
            android:layout_marginBottom="25dp"
            android:textSize="30sp"
            android:hint="@string/parental_pin"
            android:textAlignment="center"
            android:cursorVisible="false"
            android:maxLength="4"
            android:inputType="numberPassword"
            android:autofillHints="password"
            />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnContinue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edtTxtPin"
                android:layout_centerHorizontal="true"
                android:text="@string/continue_"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                style="@style/defaultTextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnContinue"
                android:layout_centerHorizontal="true"
                android:text="@string/cancel"
                android:textSize="12sp" />

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/cvPinVerification"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp">

            <TextView
                android:id="@+id/txtNeedAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/account_needed"
                android:textColor="@color/YellowOrange"
                android:textSize="21sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtNeedAccount"
                android:layout_centerHorizontal="true"
                android:text="@string/sign_up" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignIn"
                style="@style/defaultTextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnSignUp"
                android:layout_centerHorizontal="true"
                android:text="@string/sign_in"
                android:textSize="12sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnSignIn"
                android:layout_centerHorizontal="true"
                style="@style/defaultTextButton"
                android:text="@string/cancel"
                android:textColor="@color/YellowOrange"
                android:textSize="12sp"
                />


        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>