<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/svViewTask"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="25dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvViewTasks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                >

                <ImageView
                    android:id="@+id/imgExit"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignBottom="@id/txtViewTasks"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_back"
                    android:contentDescription="@string/back"
                    />

                <TextView
                    android:id="@+id/txtViewTasks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="15dp"
                    android:text="@string/view_tasks"
                    android:textColor="@color/YellowOrange"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tlStatus"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtViewTasks"
                    android:layout_centerHorizontal="true"
                    app:tabMaxWidth="125dp"
                    >

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tasked" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/completed" />


                </com.google.android.material.tabs.TabLayout>


            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/txtNothingHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="25dp"
            android:text="@string/nothing_here"
            android:textSize="16sp"
            android:textColor="@color/YellowOrange"
            android:textStyle="bold"
            android:layout_below="@id/cvViewTasks"
            android:visibility="gone"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cvViewTasks"
            android:layout_marginTop="25dp"
            app:reverseLayout="true" />

    </RelativeLayout>

</ScrollView>
