<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/txtSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/settings"
                android:textColor="@color/YellowOrange"
                android:textSize="19sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgExit"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_alignBottom="@id/txtSettings"
                android:src="@drawable/ic_back"
                android:contentDescription="@string/exit"
                />

            <ImageView
                android:id="@+id/imgThemes"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@id/txtSettings"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                android:src="@drawable/ic_themes"
                android:contentDescription="@string/theme"
                />

            <TextView
                android:id="@+id/txtThemes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/imgThemes"
                android:layout_toEndOf="@id/imgThemes"
                android:text="@string/themes"
                android:textColor="@color/YellowOrange"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvThemes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/txtThemes"
                android:layout_marginBottom="5dp" />
            
            <ImageView
                android:id="@+id/imgSettings"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginEnd="5dp"
                android:layout_below="@id/rvThemes"
                android:src="@drawable/ic_settings"
                android:contentDescription="@string/settings"
                />

            <TextView
                android:id="@+id/txtPreferences"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/imgSettings"
                android:layout_toEndOf="@id/imgSettings"
                android:text="@string/preferences"
                android:textColor="@color/YellowOrange"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtShowRefreshers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtPreferences"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="35dp"
                android:text="@string/show_Refreshers"
                android:textSize="16sp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/swShowRefreshers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/txtShowRefreshers"
                android:layout_toEndOf="@id/txtShowRefreshers" />

        </RelativeLayout>
        </ScrollView>
    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>
